# reading-group.casa

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  cli.py  flake.nix  main.py  pyproject.toml
docs/: api_data_flow.mmd  api_overview.mmd  api_overview_detailed.mmd  app_flow.mmd  user_flow.mmd
templates/: 404.html  about.html  base.html  housekeeping.html  index.html  login.html  nominate.html  vote.html
templates/partials/: candidates.html  housekeeping-panel.html  nominate-panel.html  refresh.html
tests/: test_app.py
