[project]
name = "reading-group"
version = "0.1.0"
description = "FastAPI + htmx app for coordinating a reading group."
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi>=0.115.1",
    "jinja2>=3.1.2",
    "uvicorn>=0.23.0",
]

[build-system]
requires = [
    "setuptools>=58",
    "wheel",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
]
