[project]
name = "reading-group"
version = "1.0.0"
description = "FastAPI + htmx app for coordinating a reading group."
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi>=0.115.1",
    "jinja2>=3.1.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "slowapi>=0.1.9",
    "typer>=0.20.1",
    "httpx>=0.28.1",
    "uvicorn>=0.23.0",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = [
    "setuptools>=58",
    "wheel",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
